; ModuleID = '/home/carl/AnghaBench/php-src/Zend/extr_zend_virtual_cwd.c_virtual_cwd_main_cwd_init.c'
source_filename = "/home/carl/AnghaBench/php-src/Zend/extr_zend_virtual_cwd.c_virtual_cwd_main_cwd_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@MAXPATHLEN = common dso_local global i32 0, align 4
@main_cwd_state = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @virtual_cwd_main_cwd_init(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store i64 %0, i64* %2, align 8
  %6 = load i32, i32* @MAXPATHLEN, align 4
  %7 = zext i32 %6 to i64
  %8 = call i8* @llvm.stacksave()
  store i8* %8, i8** %3, align 8
  %9 = alloca i8, i64 %7, align 16
  store i64 %7, i64* %4, align 8
  %10 = load i64, i64* %2, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %1
  %13 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @main_cwd_state, i32 0, i32 1), align 4
  %14 = call i32 @free(i32 %13)
  br label %15

15:                                               ; preds = %12, %1
  %16 = trunc i64 %7 to i32
  %17 = call i8* @getcwd(i8* %9, i32 %16)
  store i8* %17, i8** %5, align 8
  %18 = load i8*, i8** %5, align 8
  %19 = icmp ne i8* %18, null
  br i1 %19, label %22, label %20

20:                                               ; preds = %15
  %21 = getelementptr inbounds i8, i8* %9, i64 0
  store i8 0, i8* %21, align 16
  br label %22

22:                                               ; preds = %20, %15
  %23 = call i32 @strlen(i8* %9)
  store i32 %23, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @main_cwd_state, i32 0, i32 0), align 4
  %24 = call i32 @strdup(i8* %9)
  store i32 %24, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @main_cwd_state, i32 0, i32 1), align 4
  %25 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %25)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @free(i32) #2

declare dso_local i8* @getcwd(i8*, i32) #2

declare dso_local i32 @strlen(i8*) #2

declare dso_local i32 @strdup(i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
